--- a/.github/workflows/playwrigth-login-test.yml
+++ b/.github/workflows/playwrigth-login-test.yml
@@ -13,32 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Clonar el repositorio
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 2️⃣ Configurar Node.js con caché
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22
-          cache: 'pnpm'
+          node-version: 20
+          cache: 'pnpm'   # cachea el store de pnpm
 
-      # 3️⃣ Instalar pnpm correctamente
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10.6 # o la que uses en el proyecto
+      # ✅ Tu paso original con corepack (lo recuperamos)
+      - name: Enable pnpm (corepack)
+        run: corepack enable && corepack prepare pnpm@latest --activate
 
-      # 4️⃣ Instalar dependencias usando caché
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # 5️⃣ Instalar Playwright browsers optimizado
+      # ⚡️ Bundle optimizado: instala navegadores y deps de Playwright en segundos
       - name: Setup Playwright
         uses: microsoft/playwright-github-action@v1
 
-      # 6️⃣ Ejecutar tests con variables de entorno desde secrets
       - name: Run Playwright tests
         run: pnpm exec playwright test
         env:
@@ -46,7 +40,6 @@ jobs:
           TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
           TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
 
-      # 7️⃣ Subir el reporte HTML
       - name: Upload Playwright HTML Report
         uses: actions/upload-artifact@v4
         with:
