--- a/.github/workflows/playwrigth-login-test.yml
+++ b/.github/workflows/playwrigth-login-test.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        
+        with:
+          # opcional: versión; si se omite se toma package.json packageManager
+          version: 10.6
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
